@@ -38,9 +38,51 @@ namespace SlimDX
 			
 		public:
 			EffectResourceVariable( System::IntPtr pointer );
-			
-			Result SetResource( ShaderResourceView^ view );
+
+			/// <summary>
+			/// Gets the value of the variable.
+			/// </summary>
+			/// <returns>A view of the shader resource.</returns>
 			ShaderResourceView^ GetResource();
+
+			/// <summary>
+			/// Gets an array of resource views from the variable.
+			/// </summary>
+			/// <param name="views">An array of resource views to hold the retrieved shader resources.</param>
+			/// <returns>A <see cref="SlimDX::Result"/> object describing the result of the operation.</returns>
+			Result GetResourceArray(array<ShaderResourceView^>^ views);
+
+			/// <summary>
+			/// Gets an array of resource views from the variable.
+			/// </summary>
+			/// <param name="views">An array of resource views to hold the retrieved shader resources.</param>
+			/// <param name="offset">The offset into the array to begin storing values.</param>
+			/// <param name="count">The number of values to get.</param>
+			/// <returns>A <see cref="SlimDX::Result"/> object describing the result of the operation.</returns>
+			Result GetResourceArray(array<ShaderResourceView^>^ views, int offset, int count);
+
+			/// <summary>
+			/// Sets the value of the shader resource.
+			/// </summary>
+			/// <param name="view">A view of the resource to set.</param>
+			/// <returns>A <see cref="SlimDX::Result"/> object describing the result of the operation.</returns>
+			Result SetResource( ShaderResourceView^ view );
+
+			/// <summary>
+			/// Sets an array of shader resource values.
+			/// </summary>
+			/// <param name="views">An array of resource views to set.</param>
+			/// <returns>A <see cref="SlimDX::Result"/> object describing the result of the operation.</returns>
+			Result SetResourceArray( array<ShaderResourceView^>^ views );
+
+			/// <summary>
+			/// Sets an array of shader resource values.
+			/// </summary>
+			/// <param name="views">An array of resource views to set.</param>
+			/// <param name="offset">The offset into the array to begin setting values.</param>
+			/// <param name="count">The number of values to set.</param>
+			/// <returns>A <see cref="SlimDX::Result"/> object describing the result of the operation.</returns>
+			Result SetResourceArray( array<ShaderResourceView^>^ views, int offset, int count );
 		};
 	}
 };
